--- a/tools/inference/inference_pipeline.ipynb
+++ b/tools/inference/inference_pipeline.ipynb
@@ -488,7 +488,7 @@
     "import wandb\n",
     "\n",
     "# Initialize a W&B run.\n",
-    "project = 'dalle-mini-tables-colab'\n",
+    "project = \"dalle-mini-tables-colab\"\n",
     "run = wandb.init(project=project)\n",
     "\n",
     "# Initialize an empty W&B Tables.\n",
@@ -500,10 +500,10 @@
     "    # If CLIP scores exist, sort the Images\n",
     "    if logits is not None:\n",
     "        idxs = logits[i].argsort()[::-1]\n",
-    "        tmp_imgs = images[i::len(prompts)]\n",
+    "        tmp_imgs = images[i :: len(prompts)]\n",
     "        tmp_imgs = [tmp_imgs[idx] for idx in idxs]\n",
     "    else:\n",
-    "        tmp_imgs = images[i::len(prompts)]\n",
+    "        tmp_imgs = images[i :: len(prompts)]\n",
     "\n",
     "    # Add the data to the table.\n",
     "    gen_table.add_data(prompt, *[wandb.Image(img) for img in tmp_imgs])\n",
